// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dogtag function/component renders a Dogtag 1`] = `
<div
  className="dogTag"
>
  <Link
    to="/find/undefined"
  >
    <h2 />
    <img />
    <p />
    <p />
    <p>
      Posted: 
      NaN
      /
      NaN
      /
      NaN
    </p>
  </Link>
</div>
`;

exports[`Dogtag function/component renders a div with with all dogTag info 1`] = `
<div
  className="dogTag"
>
  <Link
    to="/find/1"
  >
    <h2>
      Rico
    </h2>
    <img
      alt="Rico"
      src="http://google.com"
    />
    <p>
      Small
    </p>
    <p>
      Test subject
    </p>
    <p>
      Posted: 
      NaN
      /
      NaN
      /
      NaN
    </p>
  </Link>
</div>
`;
